--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@
     background-color: #525252;
 }
 
-/* ----------------------------------------- headin */
+/* ----------------------------------------- heading */
 
 header {
     margin: 0;
@@ -70,6 +70,10 @@ header {
     font-size: 0;
 }
 
+#nav {
+    margin: 0;
+}
+
 #nav li {
     font-size: 14px;
     padding: 0;
@@ -104,4 +108,11 @@ header {
     font-size: 14px;
     font-weight: 300;
     letter-spacing: 2px;
+}
+
+/*--------------------------------------------Hover.css*/
+
+.hvr-sweep-to-bottom:before {
+    background: rgba(0, 0, 0, 0.2);
+    height: 120px;
 }
