--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,22 @@
     background-color: #525252;
 }
 
+/* ----------------------------------------- special paddings/margins/text  */
+h1, h2, h3, h4 {
+    margin: 0;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.general-sub {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    color: #fafafa;
+}
+
+
 /* ----------------------------------------- heading */
 
 header {
@@ -115,4 +131,12 @@ header {
 .hvr-sweep-to-bottom:before {
     background: rgba(0, 0, 0, 0.2);
     height: 120px;
+}
+
+/* ----------------------------------------- footer */
+footer {
+    background-color: #525252;
+    color: #fafafa;
+    min-height: 120px;
+    margin: 0;
 }
